Update end practices index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Luz Nidian Lasso Chavarro</h1>
 						   					<h2>Desarrolladora de software <a href="https://www.linkedin.com/in/nidian-lasso/" target="_blank">www.linkedin.com</a></h2>
-												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1ESH-lmVz10vR8HuXTQth55B372XZOwpZ/view?usp=sharing" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1xrE_jqqGn8fksQKhpMZcwJ1anSpNCXFn/view?usp=drive_link" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -118,7 +118,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">Sobre mí</span>
-										<p>Aspirante a desarrolladora de software,
+										<p>Desarrolladora de software,
 											 mi pasión por la excelencia técnica, mi perspectiva centrada en el usuario
 											  y mi disposición para trabajar en equipo me posicionan como una candidata 
 											  entusiasta y comprometida con el éxito en el campo del desarrollo de software.</p>
@@ -161,8 +161,8 @@
 								<h3>Python</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="35"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:35%">
-								    <span>35%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:55%">
+								    <span>55%</span>
 								  	</div>
 								</div>
 							</div>
@@ -196,6 +196,39 @@
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:30%">
 								    <span>30%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>React Js</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="30"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+								    <span>60%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Post man</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="30"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+								    <span>50%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Java Script</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
+								    <span>45%</span>
 								  	</div>
 								</div>
 							</div>
@@ -395,6 +428,33 @@
 										directa con mis familiares, comprendiendo sus requisitos específicos y diseñando soluciones
 										 web personalizadas que satisfacen sus objetivos informativos.</p>
 					               </div>
+
+								   <div class="timeline-icon color-1">
+									<i class="icon-pen2"></i>
+								 </div>
+
+								 <div class="timeline-label">
+									<h2><a href="#">Practicante de tecnología</a> <span>Febrero 2024 -Agosto 2024</span></h2>
+									<p>
+										Durante mi periodo como practicante de sistemas, tuve la oportunidad de desarrollar y
+										participar en diversos proyectos que contribuyeron significativamente a los objetivos
+										de la empresa. Entre estos proyectos, destaco la creación de aplicaciones móviles
+										utilizando el lenguaje Kotlin. Una de estas aplicaciones ha avanzado considerablemente y
+										actualmente se encuentra en proceso de ser publicada en la Google Play Store, lo cual 
+										representa un logro importante tanto para mí como para la empresa.
+
+										También me enfoqué en el diseño y la construcción de páginas web. Utilicé plataformas y 
+										herramientas como WordPress y Elementor, combinándolas con mis conocimientos en JavaScript,
+										para crear sitios web dinámicos, funcionales y visualmente atractivos. Estos proyectos no 
+										solo mejoraron la presencia en línea de la empresa, sino que también facilitaron la interacción
+										con los clientes y mejoraron la experiencia del usuario.
+										Además de mis contribuciones en el desarrollo de software, también colaboré en la solución de 
+										problemas tecnológicos que se presentaban a los demás colaboradores de la empresa, siempre con
+										 la mejor actitud y disposición para ayudar..
+									
+									</p>
+								 </div>
+
 					            </div>
 					         </article>
 
