Update index.html aptitudes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>React Js</h3>
+								<h3>Reactjs</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:60%;">
@@ -213,7 +213,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Post man</h3>
+								<h3>Postman</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -224,7 +224,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Java Script</h3>
+								<h3>JavaScript</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
