--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Luz Nidian Lasso Chavarro</h1>
 						   					<h2>Desarrolladora de software <a href="https://www.linkedin.com/in/nidian-lasso/" target="_blank">www.linkedin.com</a></h2>
-												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/18O0nqW7WkyT10y4urL49boddsX8F9iQC/view?usp=drive_link" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/18O0nqW7WkyT10y4urL49boddsX8F9iQC/view?usp=sharing" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
