--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Luz Nidian Lasso Chavarro</h1>
 						   					<h2>Desarrolladora de software <a href="https://www.linkedin.com/in/nidian-lasso/" target="_blank">www.linkedin.com</a></h2>
-												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/18O0nqW7WkyT10y4urL49boddsX8F9iQC/view?usp=sharing" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1ObSa1fUK7tiruwEuCfdIUqNKHlSsywb7/view?usp=sharing" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -118,10 +118,11 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">Sobre mí</span>
-										<p>Desarrolladora de software,
-											 mi pasión por la excelencia técnica, mi perspectiva centrada en el usuario
-											  y mi disposición para trabajar en equipo me posicionan como una candidata 
-											  entusiasta y comprometida con el éxito en el campo del desarrollo de software.</p>
+										<p>Desarrolladora de software con habilidades en comunicación asertiva, trabajo en equipo y adaptabilidad,
+											ideales para colaborar en entornos dinámicos. Destaco en gestión de tiempo, proactividad,
+											pensamiento crítico y resolución de problemas, lo que me permite enfrentar desafíos técnicos 
+											y ofrecer soluciones innovadoras. Mi experiencia se orienta al desarrollo de proyectos de calidad,
+											aportando al éxito de las organizaciones mediante el uso de tecnología.</p>
 									</div>
 								</div>
 							</div>
