--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Luz Nidian Lasso Chavarro</h1>
 						   					<h2>Desarrolladora de software <a href="https://www.linkedin.com/in/nidian-lasso/" target="_blank">www.linkedin.com</a></h2>
-												<p><a class="btn btn-primary btn-learn" href="hoja_vida.pdf" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="hojavida.pdf" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
