--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   					<div class="desc">
 						   					<h1>Luz Nidian Lasso Chavarro</h1>
 						   					<h2>Desarrolladora de software <a href="https://www.linkedin.com/in/nidian-lasso/" target="_blank">www.linkedin.com</a></h2>
-												<p><a class="btn btn-primary btn-learn" href="hojavida.pdf" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="Luz_nidian_lasso.pdf" target="_blank">Descargar Hoja de vida <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -118,11 +118,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">Sobre mí</span>
-										<p>Desarrolladora de software con habilidades en comunicación asertiva, trabajo en equipo y adaptabilidad,
-											ideales para colaborar en entornos dinámicos. Destaco en gestión de tiempo, proactividad,
-											pensamiento crítico y resolución de problemas, lo que me permite enfrentar desafíos técnicos 
-											y ofrecer soluciones innovadoras. Mi experiencia se orienta al desarrollo de proyectos de calidad,
-											aportando al éxito de las organizaciones mediante el uso de tecnología.</p>
+										<p>Profesional proactivo y con gran enfoque en la mejora de la calidad, con sólidos conocimientos en principios de control de calidad y metodologías ágiles. Comprometida con el aprendizaje continuo y con una fuerte capacidad para adaptarme rápidamente a entornos dinámicos, siempre enfocada en lograr resultados de alta calidad. Mi habilidad para colaborar eficazmente en equipos y mi enfoque orientado a los detalles me permiten contribuir al éxito de los proyectos y mejorar los procesos de desarrollo. Estoy motivada para aportar mis conocimientos, aprender de nuevos desafíos y asegurar que los estándares de calidad sean cumplidos de manera efectiva.</p>
 									</div>
 								</div>
 							</div>
