--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Desarrolladora web</a> <span>2017-2018</span></h2>
+					                  <h2><a href="#">Desarrolladora web</a> <span>2020- Actualidad</span></h2>
 					                  <p>Como parte de mi proceso de aprendizaje y desarrollo autodidacta, he tenido
 										 la oportunidad de aplicar mis habilidades de desarrollo web de manera práctica.
 										  En este contexto, he dedicado tiempo a la creación y desarrollo de pequeñas páginas
@@ -446,6 +446,7 @@
 										en diseño web, implementación de código y gestión de contenidos. He trabajado en colaboración 
 										directa con mis familiares, comprendiendo sus requisitos específicos y diseñando soluciones
 										 web personalizadas que satisfacen sus objetivos informativos.</p>
+							       <p>https://www.bohiotravel.com.co/ <br> https://www.waydegroup.com/ <br> https://voypuebliando.com/ <br> https://gridwel.com/ </p>
 					               </div>
 
 								   <div class="timeline-icon color-1">
