--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 										en diseño web, implementación de código y gestión de contenidos. He trabajado en colaboración 
 										directa con mis familiares, comprendiendo sus requisitos específicos y diseñando soluciones
 										 web personalizadas que satisfacen sus objetivos informativos.</p>
-							       <p>https://www.bohiotravel.com.co/ <br> https://www.waydegroup.com/ <br> https://voypuebliando.com/ <br> https://gridwel.com/ </p>
+							       <p> <a href="https://www.bohiotravel.com.co/" target="_blank">bohiotravel.com</a> <br> <a href="https://www.waydegroup.com/" target="_blank">waydegroup.com</a>  <br> <a href="https://voypuebliando.com/" target="_blank">voypuebliando.com</a>  <br> <a href="https://gridwel.com/" target="_blank">gridwel.com/</a>  </p>
 					               </div>
 
 								   <div class="timeline-icon color-1">
