--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 													<h2>Desarrolladora de software <a
 															href="https://www.linkedin.com/in/nidian-lasso/"
 															target="_blank">www.linkedin.com</a></h2>
-													<p><a class="btn btn-primary btn-learn" href="HV_nidian_lasso.pdf"
+													<p><a class="btn btn-primary btn-learn" href="Luz_Nidian_Lasso.pdf"
 															target="_blank">Descargar Hoja de vida <i
 																class="icon-download4"></i></a></p>
 												</div>
