Revise educational information in index.html
actualizacion educacion

--- a/index.html
+++ b/index.html
@@ -371,8 +371,7 @@
 												<h4 class="panel-title">
 													<a class="collapsed" data-toggle="collapse" data-parent="#accordion"
 														href="#collapseThree" aria-expanded="false"
-														aria-controls="collapseThree">Técnólogo en Sistematización de
-														datos (2020 -actualmente)
+														aria-controls="collapseThree">Ingeniería de Sistemas (Actualmente)
 													</a>
 												</h4>
 											</div>
@@ -381,14 +380,26 @@
 											<div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
 												aria-labelledby="headingThree">
 												<div class="panel-body">
-													<p>Actualmente, me encuentro culminando mi formación como tecnóloga
-														en Sistematización de Datos por ciclos
-														propedeúticos con el objetivo de homologar a la ingeniería.
-														Durante mis estudios en desarrollo de
-														software, adquirí habilidades en gestión
-														de requisitos y metodologías ágiles,
-														asegurando proyectos alineados con las
-														necesidades del usuario y del negocio..</p>
+													<p>Actualmente curso la Ingeniería de Sistemas en la CUN de manera virtual, con el propósito de fortalecer mis conocimientos en desarrollo de software, gestión de proyectos tecnológicos y optimización de procesos informáticos, reafirmando mi compromiso con la innovación y la excelencia profesional.</p>
+												</div>
+											</div>
+										</div>
+										<div class="panel panel-default">
+											<div class="panel-heading" role="tab" id="headingThree">
+												<h4 class="panel-title">
+													<a class="collapsed" data-toggle="collapse" data-parent="#accordion"
+														href="#collapseThree" aria-expanded="false"
+														aria-controls="collapseThree">Técnólogo en Sistematización de
+														datos (2020- 2025)
+													</a>
+												</h4>
+											</div>
+										</div>
+										<div class="panel panel-default">
+											<div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
+												aria-labelledby="headingThree">
+												<div class="panel-body">
+													<p>Durante mi formación como Tecnóloga en Sistematización de Datos por ciclos propedéuticos, adquirí habilidades en desarrollo de software, gestión de requisitos y metodologías ágiles, logrando una visión integral para el desarrollo de proyectos alineados con las necesidades del usuario y los objetivos del negocio.</p>
 												</div>
 											</div>
 										</div>
