Add new travel website link to index.html

--- a/index.html
+++ b/index.html
@@ -525,8 +525,10 @@
 													SAS informalmente como frontend en el
 													desarrollo de diversas aplicaciones.</p>
 												<p> <a href="https://www.bohiotravel.com.co/"
-														target="_blank">bohiotravel.com</a> <br> <a
-														href="https://www.waydegroup.com/"
+														target="_blank">bohiotravel.com</a> <br>
+													<a href="https://par2travel.com.co/"
+														target="_blank">par2travel.com</a> <br>
+													<a	href="https://www.waydegroup.com/"
 														target="_blank">waydegroup.com</a> <br> <a
 														href="https://www.voypuebliando.com/"
 														target="_blank">voypuebliando.com</a> <br> <a
