Update par2travel link to new URL

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 													desarrollo de diversas aplicaciones.</p>
 												<p> <a href="https://www.bohiotravel.com.co/"
 														target="_blank">bohiotravel.com</a> <br>
-													<a href="https://par2travel.com.co/"
+													<a href="https://par2travel.com/"
 														target="_blank">par2travel.com</a> <br>
 													<a	href="https://www.waydegroup.com/"
 														target="_blank">waydegroup.com</a> <br> <a
