Update job title in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="text-center">
 					<div class="author-img" style="background-image: url(images/foto_perfil.jpeg);"></div>
 					<h1 id="colorlib-logo"><a href="index.html">Nidian Lasso</a></h1>
-					<span class="position"><a href="#">Desarrolladora de software</a> </span>
+					<span class="position"><a href="#"> Tecnóloga en Sistematización de Datos (Desarrolladora de software)</a> </span>
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
 					<div id="navbar" class="collapse">
