Update course schedule description in index.html

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 											<div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
 												aria-labelledby="headingThree">
 												<div class="panel-body">
-													<p>Actualmente curso la Ingeniería de Sistemas en la CUN de manera virtual, con el propósito de fortalecer mis conocimientos en desarrollo de software, gestión de proyectos tecnológicos y optimización de procesos informáticos, reafirmando mi compromiso con la innovación y la excelencia profesional.</p>
+													<p>Actualmente curso la Ingeniería de Sistemas en la CUN en jornada Nocturna, con el propósito de fortalecer mis conocimientos en desarrollo de software, gestión de proyectos tecnológicos y optimización de procesos informáticos, reafirmando mi compromiso con la innovación y la excelencia profesional.</p>
 												</div>
 											</div>
 										</div>
